<resources>
    <string name="app_name">[GAS] Hangman</string>
    <string name="guess_android">ANDROID</string>
    <string name="guess_fragment">FRAGMENT</string>
    <string name="guess_activity">ACTIVITY</string>
    <string name="guess_camera">CAMERA</string>
    <string name="hint_android">Hint: Mobile Phone</string>
    <string name="hint_fragment">Hint: Part of an activity</string>
    <string name="hint_activity">Hint: Something you do</string>
    <string name="hint_camera">Hint: Say cheese!</string>
    <string name="hint_you">Hint: Pronoun</string>
    <string name="guess_you">YOU</string>
    <string name="select_a_word">CHOOSE A LETTER</string>
    <string name="newgame">NEW GAME</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="hint_button">Hint</string>
    <string name="space">\u0020</string>
    <string name="dash">_</string>
    <string name="success_message">Congratulations! You guessed the word correctly. On to the next\u2026</string>
    <string name="failed_message">You\'ve ran out of lives! Don\'t mind it. Try to get the next one\u2026</string>
    <string name="ok">OK</string>
    <string name="out_of_hints">You\'ve already used your 3 hints. No hints left.</string>
    <string name="too_few_lives">You only have one life left. Using another hint would take it.</string>
    <string name="second_hint">Half of remaining letters not in word have been removed. </string>
    <string name="third_hint">All vowels are now in word.</string>
</resources>