<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"/>
        <Button android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b"/>
        <Button android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"/>
        <Button android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"/>
        <Button android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e"/>
        <Button android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f"/>
        <Button android:id="@+id/g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g"/>
        <Button android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h"/>
        <Button android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i"/>
        <Button android:id="@+id/j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/j"/>
        <Button android:id="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/k"/>
        <Button android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l"/>
        <Button android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"/>
        <Button android:id="@+id/n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n"/>
        <Button android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o"/>
        <Button android:id="@+id/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p"/>
        <Button android:id="@+id/q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q"/>
        <Button android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r"/>
        <Button android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s"/>
        <Button android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t"/>
        <Button android:id="@+id/u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u"/>
        <Button android:id="@+id/v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v"/>
        <Button android:id="@+id/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w"/>
        <Button android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"/>
        <Button android:id="@+id/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y"/>
        <Button android:id="@+id/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z"/>


    </LinearLayout>

</HorizontalScrollView>
