<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LettersFragment">

    <TextView
        android:id="@+id/choose_letter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/choose_letter"
        android:textSize="100px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/a"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/a"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/choose_letter"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/b"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/b"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/choose_letter"
        app:layout_constraintLeft_toRightOf="@id/a"
        />

    <Button
        android:id="@+id/c"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/c"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/choose_letter"
        app:layout_constraintLeft_toRightOf="@id/b"
        />

    <Button
        android:id="@+id/d"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/d"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/choose_letter"
        app:layout_constraintLeft_toRightOf="@id/c"
        />

    <Button
        android:id="@+id/e"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/e"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/choose_letter"
        app:layout_constraintLeft_toRightOf="@id/d"
        />

    <Button
        android:id="@+id/f"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/f"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/choose_letter"
        app:layout_constraintLeft_toRightOf="@id/e"
        />

    <Button
        android:id="@+id/g"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/g"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/a"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/h"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/h"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/a"
        app:layout_constraintLeft_toRightOf="@id/g"
        />

    <Button
        android:id="@+id/i"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/i"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/a"
        app:layout_constraintLeft_toRightOf="@id/h"
        />

    <Button
        android:id="@+id/j"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/j"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/a"
        app:layout_constraintLeft_toRightOf="@id/i"
        />

    <Button
        android:id="@+id/k"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/k"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/a"
        app:layout_constraintLeft_toRightOf="@id/j"
        />

    <Button
        android:id="@+id/l"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/l"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/a"
        app:layout_constraintLeft_toRightOf="@id/k"
        />

    <Button
        android:id="@+id/m"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/m"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/g"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/n"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/n"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/g"
        app:layout_constraintLeft_toRightOf="@id/m"
        />

    <Button
        android:id="@+id/o"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/o"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/g"
        app:layout_constraintLeft_toRightOf="@id/n"
        />

    <Button
        android:id="@+id/p"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/p"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/g"
        app:layout_constraintLeft_toRightOf="@id/o"
        />

    <Button
        android:id="@+id/q"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/q"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/g"
        app:layout_constraintLeft_toRightOf="@id/p"
        />

    <Button
        android:id="@+id/r"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/r"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/g"
        app:layout_constraintLeft_toRightOf="@id/q"
        />

    <Button
        android:id="@+id/s"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/s"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/m"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/t"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/t"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/m"
        app:layout_constraintLeft_toRightOf="@id/s"
        />

    <Button
        android:id="@+id/u"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/u"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/m"
        app:layout_constraintLeft_toRightOf="@id/t"
        />

    <Button
        android:id="@+id/v"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/v"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/m"
        app:layout_constraintLeft_toRightOf="@id/u"
        />

    <Button
        android:id="@+id/w"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/w"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/m"
        app:layout_constraintLeft_toRightOf="@id/v"
        />

    <Button
        android:id="@+id/x"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/x"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/m"
        app:layout_constraintLeft_toRightOf="@id/w"
        />

    <Button
        android:id="@+id/y"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/y"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/s"
        app:layout_constraintLeft_toRightOf="@id/t"
        />

    <Button
        android:id="@+id/z"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/z"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".1666"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintTop_toBottomOf="@id/s"
        app:layout_constraintLeft_toRightOf="@id/y"
        />

</androidx.constraintlayout.widget.ConstraintLayout>